--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-        
+        <div class="container-fluid">
+        <!--Weather icon/degrees/location-->
+
+        <!--Current Time-->
+
+        <!--Greeting-->
+
+        <!--Input to ask what you want to work on, maybe in a form-->
+
+        <!--Quote-->
     </body>
-    
+
     <!--load custom scripts-->
     <script src="index.js"></script>
 </html>
