added random quote function

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 Image source here
             </div>
             <div class = "col-md-8 col-sm-6 col-xs-6 text-center" id = "quote-block">
-                If you can see Chuck Norris, Chuck Norris can see you.  If you can't see Chuck Norris, you are seconds from death.
+                If you can see CHUCK NORRIS, He can see you.  If you can't see CHUCK NORRIS, you are seconds from death.
             </div>
             <div class = "col-md-2 col-sm-3 col-xs-6 text-right" id = "extra-block">
                 More?
