Added TODO and greeting shuffler

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <!--Greeting-->
         <div class = "row">
                 <p class = "text-center" id ="greeting-block">
-                    "Hello there, my bromide.  Do you know the times?"
+                    <span id = "time-descriptor">Good Morrow, </span><span id = "greeting-descriptor">my bromide.</span>
                 </p>
         </div>
 
         <!--Input to ask what you want to work on for the todo list, maybe in a form-->
         <div class = "row">
             <div class = "form-group">
-                <input class = "form-control text-center" name = "todo-input" placeholder = "What are you doing?  Why are you doing it?" />
+                <input class = "form-control text-center" name = "todo-input" id = "todo-input" placeholder = "What are you doing?  Why are you doing it?" />
             </div>
         </div>
 
